[package]
name = "rehardcover"
version = "0.1.0"
edition = "2024"

[dependencies]
cynic = { version = "3", features = ["http-surf"] }
surf = "2"
async-std = { version = "1", features = ["attributes"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
cynic-codegen = { version = "3" }
